[package]
name = "sha-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
bitflags = "1.3.2"
nix = "0.24.1"
derive_builder = "0.20.2"
hex-literal = "1.0.0"
ryu = "1.0.20"

[dev-dependencies]
tempfile = "3.8"

