[package]
name = "sha-rust"
version = "0.1.4"
edition = "2021"
authors = ["radioman <radioman@users.noreply.github.com>"]
description = "A high-performance Rust library for hash verification and file pattern matching"
license = "MIT"
repository = "https://github.com/radioman/sha-rust"
readme = "README.md"
keywords = ["hash", "verification", "pattern-matching", "file", "security"]
categories = ["algorithms", "development-tools", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
bitflags = "1.3.2"
nix = "0.24.1"
derive_builder = "0.20.2"
hex-literal = "1.0.0"
ryu = "1.0.20"

[dev-dependencies]
tempfile = "3.8"

